Revision history for Scope-OnExit

0.02    2010-03-24
        Documentation updates

0.01    2009-03-22
        First version, released on an unsuspecting world.
