@@ -1,5 +1,10 @@
 Revision history for Scope-OnExit
 
+<<<<<<< HEAD
+=======
+        Modernize Exporter and loader code
+
+>>>>>>> f152529... f1
 0.02    2010-03-24
         Documentation updates
 
